syntax = "proto3";

// MsgPayForBlobs pays for the inclusion of a blob in the block.
message MsgPayForBlobs {
  string signer = 1;
  repeated bytes namespace_ids = 2;
  repeated uint32 blob_sizes = 3;
  // share_commitments is a list of share commitments (one per blob).
  repeated bytes share_commitments = 4;
  // share_versions are the versions of the share format that the blobs
  // associated with this message should use when included in a block. The
  // share_versions specified must match the share_versions used to generate the
  // share_commitment in this message.
  repeated uint32 share_versions = 8;
}

message MalleatedTx {
    bytes original_tx_hash = 1;
    bytes tx = 2;
}